# ChangeLog for sys-apps/busybox
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/busybox/ChangeLog,v 1.91 2006/06/28 03:33:18 tgall Exp $

  27 June 2006; Tom Gall <tgall@gentoo.org> busybox-1.1.0.ebuild:
  - add -mminimal-toc to fix static builds against glibc

*busybox-1.1.3 (18 May 2006)

  18 May 2006; <solar@gentoo.org> +busybox-1.1.3.ebuild:
  - version bump

  27 Apr 2006; Alec Warner <antarus@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

  29 Apr 2006; Joshua Kinard <kumba@gentoo.org> busybox-1.1.0.ebuild:
  Marked stable on mips.

*busybox-1.1.2 (10 Apr 2006)

  10 Apr 2006; Mike Frysinger <vapier@gentoo.org> +busybox-1.1.2.ebuild:
  Version bump #129528 by Natanael Copa.

  28 Mar 2006; Mike Frysinger <vapier@gentoo.org> +files/1.1.1/insmod.patch,
  busybox-1.1.1.ebuild:
  Fix from upstream for big endian hosts.

  28 Mar 2006; Mike Frysinger <vapier@gentoo.org> busybox-1.1.0.ebuild,
  busybox-1.1.1.ebuild:
  Fixup symlink install #126304 by Axel Burri.

*busybox-1.1.1 (28 Mar 2006)

  28 Mar 2006; Mike Frysinger <vapier@gentoo.org> +files/1.1.1/bb.patch,
  +busybox-1.1.1.ebuild:
  Version bump #127420 by Natanael Copa.

  28 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org> busybox-1.1.0.ebuild:
  Stable on sparc wrt #127377

  27 Mar 2006; Markus Rothe <corsair@gentoo.org> busybox-1.1.0.ebuild:
  Stable on ppc64

  25 Mar 2006; Bryan ÃÂstergaard <kloeri@gentoo.org busybox-1.1.0.ebuild:
  Stable on alpha, bug 127377.

  25 Mar 2006; Torsten Veller <tove@gentoo.org> busybox-1.1.0.ebuild:
  Stable on x86 (#127377)

  25 Mar 2006; Joseph Jezak <josejx@gentoo.org> busybox-1.1.0.ebuild:
  Marked ppc stable for bug #127377.

  25 Mar 2006; Luis Medinas <metalgod@gentoo.org> busybox-1.1.0.ebuild:
  Stable on amd64. See bug #127377.

  10 Mar 2006; Mike Frysinger <vapier@gentoo.org> +files/1.1.0/glibc.patch,
  busybox-1.1.0.ebuild: