@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/busybox
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/busybox/ChangeLog,v 1.91 2006/06/28 03:33:18 tgall Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/busybox/ChangeLog,v 1.92 2006/06/28 06:52:04 corsair Exp $
+
+  28 Jun 2006; Markus Rothe <corsair@gentoo.org> busybox-1.1.1.ebuild,
+  busybox-1.1.2.ebuild, busybox-1.1.3.ebuild:
+  Added tgall's diff to newer versions, too
 
   27 June 2006; Tom Gall <tgall@gentoo.org> busybox-1.1.0.ebuild:
   - add -mminimal-toc to fix static builds against glibc
